Upgrade vendored BeanShell to 2.1.1